--- a/DeepComparer/Tests/Tests.csproj
+++ b/DeepComparer/Tests/Tests.csproj
@@ -65,6 +65,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollectionFacts.cs" />
     <Compile Include="DataContractComparerFacts.cs" />
     <Compile Include="NestedHierarchiesFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
