+ Default list selectors

--- a/DeepComparer/Tests/Tests.csproj
+++ b/DeepComparer/Tests/Tests.csproj
@@ -67,6 +67,7 @@
   <ItemGroup>
     <Compile Include="CollectionFacts.cs" />
     <Compile Include="DataContractComparerFacts.cs" />
+    <Compile Include="Defaults.cs" />
     <Compile Include="NestedHierarchiesFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
