--- a/DeepComparer/DeepComparer/DeepComparer.csproj
+++ b/DeepComparer/DeepComparer/DeepComparer.csproj
@@ -48,6 +48,7 @@
     <Compile Include="DataContractComparer.cs" />
     <Compile Include="DataContractComparerBuilder.cs" />
     <Compile Include="EnumerableExt.cs" />
+    <Compile Include="ObjectExpander.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
