--- a/DeepComparer/Tests/Tests.csproj
+++ b/DeepComparer/Tests/Tests.csproj
@@ -65,11 +65,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CollectionFacts.cs" />
-    <Compile Include="CustomComparatorsFacts.cs" />
+    <Compile Include="ExpandCollectionFacts.cs" />
+    <Compile Include="CustomFacts.cs" />
     <Compile Include="DataContractComparerFacts.cs" />
     <Compile Include="Defaults.cs" />
     <Compile Include="NestedHierarchiesFacts.cs" />
+    <Compile Include="ExpandObjectFacts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
