--- a/DeepComparer/DeepComparer/DeepComparison.csproj
+++ b/DeepComparer/DeepComparer/DeepComparison.csproj
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Defaults.cs" />
+    <Compile Include="Collections.cs" />
     <Compile Include="Internals\CachingDictionary.cs" />
     <Compile Include="CollectionComparisonKind.cs" />
     <Compile Include="TreatObjectAs.cs" />
